[GTK][a11y] Embedded objects are not correctly handled by text interface with ATSPI https://bugs.webkit.org/show_bug.cgi?id=232622

Reviewed by Andres Gonzalez.

Source/WebCore:

Make sure text iterator is emitting object replacement characters when converting offsets to/from visible positions.

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::visiblePositionForIndex const):
(WebCore::AccessibilityRenderObject::indexForVisiblePosition const):
* accessibility/atspi/AccessibilityObjectTextAtspi.cpp:
(WebCore::AccessibilityObjectAtspi::boundsForSelection const):
* editing/Editing.cpp:
(WebCore::indexForVisiblePosition):
(WebCore::visiblePositionForIndex):
* editing/Editing.h:

Tools:

Add a test case to check handling of embedded objects by text interface.

* TestWebKitAPI/Tests/WebKitGtk/TestWebKitAccessibility.cpp:
(testTextReplacedObjects):
(beforeAll):


Canonical link: https://commits.webkit.org/243900@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285339 268f45cc-cd09-0410-ab3c-d52691b4dbfc